<resources>
    <string name="app_name">Estetika</string>
    <string name="home_overview">Overview</string>
    <string name="language_filter">en-EN</string>
    <string name="title" translatable="false">Title</string>
    <string name="duration" translatable="false">Duration</string>
    <string name="pegi" translatable="false">PEGI</string>
    <string name="home_recentlyviewed">Recently Ordered</string>
    <string name="home_mytickets">My Tickets</string>
    <string name="home_contact">Contact</string>
    <string name="title_description">Title:</string>
    <string name="pegi_description">Age:</string>
    <string name="genre_description">Genre:</string>
    <string name="genre" translatable="false">Genre</string>
    <string name="duration_desription">Duration:</string>
    <string name="spinner_all">All</string>
    <string name="minutes">minutes</string>
    <string name="title_activity_movie_review" translatable="false">MovieReviewActivity</string>
    <string name="author_movie_review">Author</string>
    <string name="review_movie_review">Review</string>
    <string name="contact_name">Cinema Estetika</string>
    <string name="address_country">The Netherlands</string>
    <string name="address_street_no" translatable="false">Lovendijkstraat 61</string>
    <string name="contact_phone" translatable="false">088 525 7500</string>
    <string name="address_postal_city" translatable="false">4818AJ Breda</string>
    <string name="reviews">Reviews</string>
    <string name="buyticket_description">Order Tickets</string>
    <string name="OrderActivity_TicketsFor">Tickets For</string>
    <string name="OrderActivity_TotalPrice">Total: €</string>
    <string name="OrderActivity_ticketsRegular">"Regular Tickets: "</string>
    <string name="OrderActivity_ticketsRecuction">"Reduction Tickets: "</string>
    <string name="OrderActivity_ticketsChilds">"Children Tickets (under 12): "</string>
    <string name="OrderActivity_placeOrder">Place Order</string>
    <string name="OrderActivity_seat">Seat: </string>
    <string name="SucceedPay">Succeed Payment</string>
    <string name="FailPay">Fail Payment</string>
    <string name="payFailTryAgain">Payment Failed, Please Try Again</string>
    <string name="paySucceed">Payment Succeeded</string>
    <string name="cinema_create_review">Create Review</string>
    <string name="cinema_create_review_email">E-mail:</string>
    <string name="cinema_create_review_review">Your Review:</string>
    <string name="cinema_create_review_submit">Submit</string>
    <string name="cinema_create_review_submit_message">Your review has been submitted</string>
    <string name="inputEmail">Email Address</string>
    <string name="ticketsFor">"Tickets for: "</string>
    <string name="noSeatSelected">No Seat Selected!</string>
</resources>
