<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.seventa.estetika.OrderActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/OrderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OrderActivity_TicketsFor"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="39dp" />

        <ListView
            android:id="@+id/TicketList"
            android:layout_width="wrap_content"
            android:layout_height="98dp">

        </ListView>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerMethod"
        android:layout_width="148dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/placeOrderBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/placeOrderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerMethod"
        app:layout_constraintTop_toTopOf="@+id/spinnerMethod" />

    <Button
        android:id="@+id/placeOrderBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/OrderActivity_placeOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerMethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ticketsRegularTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/OrderActivity_ticketsRegular" />

            <TextView
                android:id="@+id/ticketsChildsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/OrderActivity_ticketsChilds" />

            <TextView
                android:id="@+id/ticketsReductionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/OrderActivity_ticketsRecuction" />

            <TextView
                android:id="@+id/totalPriceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/OrderActivity_TotalPrice" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
