<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.seventa.estetika.MainActivity">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="fill_parent"
        android:layout_height="148dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mainOverviewImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_home" />

        <ImageView
            android:id="@+id/mainRecentImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_ticket_alt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="fill_parent"
        android:layout_height="18dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout1">

        <TextView
            android:id="@+id/mainOverviewTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_overview"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="265dp" />

        <TextView
            android:id="@+id/mainRecentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_mytickets"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="246dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/mainContactImageView"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/mainContactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_contact"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/mainContactImageView"
        app:layout_constraintEnd_toEndOf="@+id/mainContactImageView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/mainContactImageView"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout2"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>